[package]
edition = "2024"
name = "pl011"
version = "0.1.0"

[dependencies]
mbarrier = "0.1"
dma-api = { version = "0.3", features = ["alloc"] }
log = "0.4"
tock-registers = "0.9.0"
aarch64-cpu = "10.0"
futures = { version = "0.3", features = ["alloc"], default-features = false }
spin_on = "0.1"
[dev-dependencies]
bare-test = "0.4"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
